tests/snapshots/snapshots__basic.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,1.5,0,1.5,false
2,2,0,2,false
