tests/snapshots/snapshots__deposit_chargeback.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,0.5,0,0.5,true
