tests/snapshots/snapshots__dispute_deposit.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,30,0,30,false
