tests/snapshots/snapshots__funds_held.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,200.0001,50,250.0001,false
2,0,0,0,true
