tests/snapshots/snapshots__process_many_records.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,0.5,2,2.5,true
2,0,0,0,true
3,0,1000,1000,false
