tests/snapshots/snapshots__same_tx_id_attempt.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,135,0,135,false
