tests/snapshots/snapshots__smoke_test.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,1.5,0,1.5,false
2,2,0,2,false
3,0,0,0,true
4,20,0,20,false
