tests/snapshots/snapshots__trigger_locked.snap
---
source: tests/snapshots.rs
expression: stdout
---
client,available,held,total,locked
1,0,0,0,true
